# llm-football-conversational-banter

./: README.md  main.py  pyproject.toml
