[tool.poetry]
name = "llm-football-conversational-banter"
version = "0.1.0"
description = ""
authors = ["enfinity <festusowumi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain-openai = "^0.1.22"
pandas = "^2.2.2"
pulp = "^2.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
